--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="twitter:" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Primera Pagina</title>
   </head>
   <body>
     Hola todos
+    <h1 style=
+    "background-color:lightgreen;
+    ">
+    Titulo 1</h1>
+    <hr>
+    <h2>Titulo 2</h2>
+    <h3>Titulo 3</h3>
+    <p style=
+    "color:white;
+    background-color:purple;
+    padding: 4px;
+    border radius: 4px:
+    ">
+    asjdsadjsaldjsadjaskldjsakdjsakdjsakdjsakdjaskdjas</p>
+    <a href="/acerca.html">Ir a acerca</a>
+
   </body>
 </html>
